--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -18,8 +18,20 @@
 }
 
 .form-control{
-    height: 100%;   
+    height: 100%;  
+    --bs-border-color: #8D0709;
+    --bs-border-radius: 16px;
+    border-color: #8D0709 
 }
+
+.form-control:focus {
+    border-color: #8D0709 !important; /* Custom border color */
+    outline: none !important; /* Remove default outline */
+    box-shadow: none !important; /* Remove default box shadow */
+    border-width: 2px
+}
+
+
 
 .card{
     border: none!important;
@@ -88,11 +100,17 @@
 }
 
 .input_login {
-    padding: 0px 10px;
-    border-radius: 7px;
-    border: 10px  #8D0709;
-    border-color: #8D0709;
+    --bs-border-color: #8D0709;
+    --bs-border-radius: 16px;
+    border-color: #8D0709
 }
+
+.input-login:hover {
+    outline: none;
+    border-color: #8D0709;
+    box-shadow: 0 0 0 1px #8D0709;
+}
+
 .form_label{
     margin-bottom: 7px;
     color: "black";
@@ -178,15 +196,15 @@
     background-color: #d9d9d9;
 }
 .card-body-login{
-    border: none;
     display: flex;
     flex-direction: column!important;
     align-items: center;
     justify-content: center;
     align-items: center;
-    --bs-card-border-color: #FFFFFF;
+    --bs-card-border-color: #8D0709;
     margin-left: 3%;
     margin-right: 3%;
+    background-color: #ffffff;
 }
 
 
@@ -220,13 +238,33 @@
     width: 100vw;        
 }
 
+.add-curators-header {
+    color: "black";
+    font-family: "Lexend", sans-serif;
+    font-size: 24px;
+    letter-spacing: 2px;
+    font-weight: 300;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5%;
+}
+
 .button_add_curators{
     width: 100%;
-    background-color: #f7d474;
+    background-color: #8D0709;
     border: none;
-    border-radius: 12px;
-    margin-top: 15px;
-    font-size: 16px;
+    border-radius: 16px;
+    margin-top: 10px;
     padding: 10px;
+    font-family: "Lexend", sans-serif;
+    font-size: 16px;
+    letter-spacing: 2px;
+    font-weight: 300;
+    color: #ffffff;
+    transition: background-color 300ms ease-out;
+}
 
+.button_add_curators:hover {
+    background-color: #C81F21;
 }
