--- a/src/styles/Form_reg.css
+++ b/src/styles/Form_reg.css
@@ -38,7 +38,6 @@
     width: 70%;
 }
 .body_furniture{
-    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -50,14 +49,12 @@
 }
 .furniture_block {
     width: 70%;
-    display: flex;
     flex-direction: column;
     align-items: center;
     /* border-top: 1px solid gray; */
 }
 
 .furniture_list{
-    display: flex;
     flex-direction: column;
     align-items: center;
 }
@@ -166,34 +163,27 @@ input[disabled]:hover{
 .file_input::before {
     width: 100px;
     text-decoration: none;
-    /* margin-left: 30px; */
     color: black;
     border-radius: 12px;
     content: "Додати фото";
+    color: #ffffff;
     display: inline-block;
     border: none;
     cursor: pointer;
-    font-family: 'Montserrat Medium 500', sans-serif;
-    font-size: 14px;
     padding: 14px;
-    background-color: #f3e8c9;
+    background-color: #8D0709;
+    font-family: "Lexend", sans-serif;
+    letter-spacing: 2px;
+    font-size: 12px;
+    font-weight: 300;
     width: 100%;
     height: 50px;
-    text-align: center
+    text-align: center;
 }
 
 .file_input:hover::before {
-
-    content: 'Додати фото';
-    font-family: 'Montserrat Medium 500', sans-serif;
-    border: none;
-    background-color: #efd8b5;
-}
-
-.file_input:active::before {
-    content: 'Додати фото';
-    font-family: 'Montserrat Medium 500', sans-serif;
-    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+    transition: background-color 300ms ease-out;
+    background-color: #C81F21;
 }
 
 .file_div {
@@ -386,13 +376,10 @@ li .active::after {
     }
     
     .stage_wrapper li .label {
-
         letter-spacing: 0.5px;
         font-size: 12px;
         margin-right: 5px;
     }
-
-    
     .button_next{
       width: 300px;
       height: 80px;
@@ -411,45 +398,65 @@ li .active::after {
 }
 
 .user_input {
-    margin-left: 15px;
+    display: flex;
+    font-family: "Lexend", sans-serif;
+    font-size: 12px;
+    letter-spacing: 2px;
+    font-weight: 300;
+    border-radius: 16px;
+    width: 30%;
+    padding: 1%;
+    margin-bottom: 5px;
+    border: 1px solid #8D0709;
     margin-top: 10px;
-    display: block;
-    width: 100%;
-    align-self: center;
-    padding: 10px;
-    max-width: 300px;
-    min-width: 200px;
-    outline: none;
-    border: 1px solid transparent;
-    border-radius: 10px;
-    transition: all .5s;
-    border: 1px solid rgb(86, 85, 85);
-    color: black;
+    margin-left: 20px;
 }
 
-.user_input:hover {
-    border: 1px solid black;
+.user_input:focus {
+    outline: none;
+    border-color: #8D0709;
+    box-shadow: 0 0 0 1px #8D0709;
 }
+
 .text_header {
+    font-family: "Lexend", sans-serif;
+    font-size: 16px;
+    letter-spacing: 2px;
+    font-weight: 300;
     margin-top: 10px;
-    padding: 5px 0px 0px 0px;
-    font-size: 18px;
-    font-family: 'Montserrat Medium 500', sans-serif;
+    padding: 10px 0px 0px 0px;
+    margin-left: 20px;
+}
+
+.questions-text {
+    font-family: "Lexend", sans-serif;
+    font-size: 12px;
+    letter-spacing: 2px;
+    font-weight: 300;
+    padding-top: 5px;
+    margin-left: 20px;
 }
 
 .obj_description {
+    font-family: "Lexend", sans-serif;
+    font-size: 12px;
+    letter-spacing: 2px;
+    font-weight: 300;
     width: 100%;
     margin-bottom: 15px;
+    
     padding: 15px;
     border-radius: 10px;
     transition: all .5s;
     max-width: 600px;
-    border: 1px solid gray;
     min-height: 80px;
+    border: 1px solid #8D0709;
 }
 
-.obj_description:hover {
-    border: 1px solid black;
+.obj_description:focus {
+    outline: none;
+    border-color: #8D0709;
+    box-shadow: 0 0 0 1px #8D0709;
 }
 
 .select_owner {
@@ -547,6 +554,52 @@ justify-content: center;
 }
 
 @media screen and (max-width:480px){
+    .user_input {
+        font-family: "Lexend", sans-serif;
+        font-size: 12px;
+        letter-spacing: 2px;
+        font-weight: 300;
+        border-radius: 16px;
+        width: 80%;
+        padding: 2%;
+        margin-bottom: 5px;
+        border: 1px solid #8D0709;
+        margin-top: 10px;
+        margin-left: 0px;
+    }
+    .obj_description {
+        font-family: "Lexend", sans-serif;
+        font-size: 12px;
+        letter-spacing: 2px;
+        font-weight: 300;
+        width: 100%;
+        margin-bottom: 15px;
+        margin-left: 5%;
+        padding: 15px;
+        border-radius: 10px;
+        transition: all .5s;
+        max-width: 600px;
+        min-height: 80px;
+        border: 1px solid #8D0709;
+    }
+    .text_header {
+        font-family: "Lexend", sans-serif;
+        font-size: 12px;
+        letter-spacing: 2px;
+        font-weight: 300;
+        margin-top: 10px;
+        padding: 10px 0px 0px 0px;
+        margin-left: 0px;
+    }
+    
+    .questions-text {
+        font-family: "Lexend", sans-serif;
+        font-size: 12px;
+        letter-spacing: 2px;
+        font-weight: 300;
+        padding-top: 5px;
+        margin-left: 0px;
+    }
     .results_wrapper{
         flex-direction: column;
         align-items: center;
@@ -559,9 +612,6 @@ justify-content: center;
       width: 290px;
       height: 60px;
       font-size: 16px;
-    }
-    .obj_description {
-        width: 100%;
     }
     .obj_input{
         width: 100%;
