--- a/src/styles/Form_reg.css
+++ b/src/styles/Form_reg.css
@@ -1,8 +1,14 @@
 .alert_div {
-    padding: 20px;
-    background-color: #f3e8c9; /* Red */
+    width: 70%;
+    margin-left: 15%;
+    padding: 12px;
+    background-color: #d9d9d9; /* Red */
     color: black;
     margin-bottom: 15px;
+    font-family: "Lexend", sans-serif;
+    font-size: 16px;
+    letter-spacing: 2px;
+    font-weight: 300;
   }
   
   /* The close button */
@@ -94,21 +100,23 @@
 .form_button_next_step {
     display: block;
     cursor: pointer;
-    font-size: 16px;
     color: #000000;
     transition: .5s all;
     width: 200px;
     height: 45px;
     background-color: #ffffff;
     border: solid;
-    border-color: #f3e8c9;
+    border-color: #8D0709;
     border-width: 3px;
-    font-family: 'Montserrat Medium 500', sans-serif;
+    font-family: "Lexend", sans-serif;
+    letter-spacing: 2px;
+    font-size: 16px;
+    font-weight: 300;
     border-radius: 12px;
-  }
+}
   
   .form_button_next_step:hover {
-    background-color: #f3e8c9;
+    background-color: #d9d9d9;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   }
 
@@ -118,8 +126,7 @@
     border-top: 2px dashed #000000 ;
     display: flex;
     align-items: center;
-    width: 70%;
-    
+    width: 70%;  
     display: flex;
     justify-content: space-between;
 }
@@ -174,7 +181,7 @@ input[disabled]:hover{
     background-color: #8D0709;
     font-family: "Lexend", sans-serif;
     letter-spacing: 2px;
-    font-size: 12px;
+    font-size: 16px;
     font-weight: 300;
     width: 100%;
     height: 50px;
@@ -189,7 +196,8 @@ input[disabled]:hover{
 .file_div {
     gap: 30px;
     display: flex;
-    justify-content: space-between;
+    margin-left: 5%;
+    /* justify-content: space-between; */
 }
 
 .obj_input {
@@ -283,16 +291,16 @@ input[disabled]:hover{
 
 .stage_wrapper li .icons {
     font-size: 25px;
-    color: #479c47;
+    color: #8D0709;
     margin: 0 60px;
 }
 
 .stage_wrapper li .label {
     font-family: sans-serif;
     letter-spacing: 1px;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
-    color: #479c47;
+    color: #000000;
 }
 
 .stage_wrapper li .step {
@@ -300,7 +308,7 @@ input[disabled]:hover{
     height: 30px;
     width: 30px;
     border-radius: 50%;
-    background-color: #d7d7c3;
+    background-color: #d9d9d9;
     margin: 16px 0 10px;
     display: grid;
     place-items: center;
@@ -318,7 +326,7 @@ input[disabled]:hover{
     width: 25vw;
     max-width: 300px;
     height: 3px;
-    background-color: #d7d7c3;
+    background-color: #d9d9d9;
     right: 30px;
 }
 
@@ -332,18 +340,18 @@ input[disabled]:hover{
 }
 
 .stage_wrapper li .step p {
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .stage_wrapper li .active {
     z-index: 3;
-    background-color: #479c47;
+    background-color: #8D0709;
 }
 
 li .active::after {
     position: absolute;
     z-index: 2;
-    background-color: #479c47;
+    background-color: #8D0709;
 
 }
 
@@ -361,6 +369,35 @@ li .active::after {
 }
 
 @media screen and (max-width:480px){
+    .alert_div {
+        margin-left: 0%;
+        width: 100%;
+        padding: 12px;
+        background-color: #d9d9d9; /* Red */
+        color: black;
+        margin-bottom: 15px;
+        font-family: "Lexend", sans-serif;
+        font-size: 12px;
+        letter-spacing: 2px;
+        font-weight: 300;
+      }
+    .form_button_next_step {
+        display: block;
+        cursor: pointer;
+        color: #000000;
+        transition: .5s all;
+        width: 200px;
+        height: 45px;
+        background-color: #ffffff;
+        border: solid;
+        border-color: #8D0709;
+        border-width: 3px;
+        font-family: "Lexend", sans-serif;
+        letter-spacing: 2px;
+        font-size: 12px;
+        font-weight: 300;
+        border-radius: 12px;
+      }
     .submit_align_wrapper{
         width: 100%;
     }
@@ -376,9 +413,7 @@ li .active::after {
     }
     
     .stage_wrapper li .label {
-        letter-spacing: 0.5px;
-        font-size: 12px;
-        margin-right: 5px;
+        font-size: 8px;
     }
     .button_next{
       width: 300px;
@@ -444,7 +479,7 @@ li .active::after {
     font-weight: 300;
     width: 100%;
     margin-bottom: 15px;
-    
+    margin-left: 5%;
     padding: 15px;
     border-radius: 10px;
     transition: all .5s;
@@ -477,22 +512,24 @@ li .active::after {
     margin-bottom: 20px;
 }
 .submit_form{
-    color: black;
+    color: rgb(255, 255, 255);
     border-radius: 12px;
-    content: 'Додати фото';
     display: inline-block;
     border: none;
     cursor: pointer;
-    font-family: 'Montserrat Medium 500', sans-serif;
+    font-family: "Lexend", sans-serif;
     font-size: 16px;
+    letter-spacing: 2px;
+    font-weight: 300;
     padding: 12px;
-    background-color: #f3e8c9;
-    width: 240px;
+    background-color: #8D0709;
+    width: 200px;
     height: 50px;
-    text-align: center
+    text-align: center;
+    transition: background-color 300ms ease-out;
 }
 .submit_form:hover {
-    background-color: #efd8b5;
+    background-color: #C81F21;
 }
 .rules {
     font-size: 100%;
@@ -536,12 +573,11 @@ li .active::after {
     height: 100%;
 }
 .room_type {
-    padding: 2          0px;
-    font-size: 18px;
-    text-transform: uppercase;
-    font-family: 'Montserrat Medium 500', sans-serif;
-    letter-spacing: 5px;
-    margin-bottom: 0.8rem;
+    padding: 20px;
+    font-family: "Lexend", sans-serif;
+    font-size: 16px;
+    letter-spacing: 2px;
+    font-weight: 600;
     color: #000000;
     outline: none;
     text-align: center;
@@ -551,6 +587,21 @@ li .active::after {
 display: flex;
 align-items: center;
 justify-content: center;
+}
+
+.next-stage {
+    font-family: "Lexend", sans-serif;
+    font-size: 16px;
+    letter-spacing: 2px;
+    font-weight: 300;
+    margin-left: 5%;
+}
+
+.next-stage-name {
+    font-family: "Lexend", sans-serif;
+    font-size: 16px;
+    letter-spacing: 2px;
+    font-weight: 600;
 }
 
 @media screen and (max-width:480px){
@@ -574,7 +625,7 @@ justify-content: center;
         font-weight: 300;
         width: 100%;
         margin-bottom: 15px;
-        margin-left: 5%;
+        margin-left: 0%;
         padding: 15px;
         border-radius: 10px;
         transition: all .5s;
@@ -627,7 +678,7 @@ justify-content: center;
         /* width: 100px; */
         font-size: 12px;
         width: 100%;
-        height: 40px;
+        height: 45px;
     }
     .clear_images{
         font-size: 12px;
@@ -635,5 +686,35 @@ justify-content: center;
         height: 25px;
         /* margin-top: 10px; */
         /* margin-left: 30px; */
+    }
+    .submit_form{
+        color: rgb(255, 255, 255);
+        border-radius: 12px;
+        display: inline-block;
+        border: none;
+        cursor: pointer;
+        font-family: "Lexend", sans-serif;
+        font-size: 12px;
+        letter-spacing: 2px;
+        font-weight: 300;
+        padding: 12px;
+        background-color: #8D0709;
+        width: 200px;
+        height: 45px;
+        text-align: center
+    }
+    .next-stage {
+        font-family: "Lexend", sans-serif;
+        font-size: 12px;
+        letter-spacing: 2px;
+        font-weight: 300;
+        margin-left: 0%;
+    }
+    
+    .next-stage-name {
+        font-family: "Lexend", sans-serif;
+        font-size: 12px;
+        letter-spacing: 2px;
+        font-weight: 600;
     }
 }
