--- a/src/styles/Main_form.css
+++ b/src/styles/Main_form.css
@@ -56,21 +56,25 @@
   font-size: 20px;
   font-family: 'Lexend', sans-serif;
   letter-spacing: 2px;
-  font-weight: 300;
+  font-weight: 600;
   height: 70px;
 }
 
 .greet {
+  font-family: "Lexend", sans-serif;
   font-size: 16px;
-  font-family: 'Montserrat Medium 500', sans-serif;
+  letter-spacing: 2px;
+  font-weight: 300;
   text-align: justify;
-  padding-left: 52px;
-  padding-right: 52px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .greet_big {
-  font-size: 18px;
-  font-family: 'Montserrat Medium 500', sans-serif;
+  font-family: "Lexend", sans-serif;
+  font-size: 16px;
+  letter-spacing: 2px;
+  font-weight: 300;
   text-align: center;
   padding-left: 52px;
   padding-right: 52px;
@@ -89,9 +93,9 @@
 }
 
 .form_button_nav {
-  display: flex; /* Changed from block to flex */
+  display: flex;
   cursor: pointer;
-  font-size: 12px;
+  font-size: 16px;
   color: #000000;
   transition: .5s all;
   width: 400px;
@@ -104,11 +108,11 @@
   margin: 20px auto;
   font-family: "Lexend", sans-serif;
   letter-spacing: 2px;
-  justify-content: flex-start; /* Aligns the content to the left */
-  align-items: center; /* Vertically centers the content */
-  padding-left: 10px; /* Optional: Adds some padding to the left */
-  box-sizing: border-box; /* Ensures padding is included in the width */
-  text-align: left; /* Aligns text to the left */
+  justify-content: space-between; /* Ensures content is spaced out */
+  align-items: center;
+  padding-left: 10px;
+  box-sizing: border-box;
+  text-align: left;
 }
 
 
@@ -129,12 +133,14 @@
 } */
 
 .register-text {
-  font-family: "Lexend", sans-serif;
-  font-size: 16px;
-  letter-spacing: 2px;
-  font-weight: 300;
   display: flex;
   justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-family: 'Lexend', sans-serif;
+  letter-spacing: 2px;
+  font-weight: 600;
+  height: 70px;
   margin-top: 5%;
 }
 
@@ -144,6 +150,26 @@
 }
 
 @media screen and (max-width:480px){
+  .greet {
+    font-family: "Lexend", sans-serif;
+    font-size: 12px;
+    letter-spacing: 2px;
+    font-weight: 300;
+    text-align: justify;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  
+  .greet_big {
+    font-family: "Lexend", sans-serif;
+    font-size: 12px;
+    letter-spacing: 2px;
+    font-weight: 300;
+    text-align: center;
+    padding-left: 52px;
+    padding-right: 52px;
+    margin-top: 16px;
+  }
   .register {
     font-size: 20px;
   }
@@ -154,6 +180,7 @@
     width: 280px;
     height: 45px;
     margin: 20px auto;
+    font-size: 12px;
   }
   .circle {
     left: 47%;
