--- a/src/styles/Roomsnew.css
+++ b/src/styles/Roomsnew.css
@@ -63,6 +63,10 @@
 }
 
 .input-room {
+    font-family: "Lexend", sans-serif;
+    letter-spacing: 2px;
+    font-size: 16px;
+    font-weight: 300;
     height: 45px;
     width: 300px;
     margin-right: 10px;
@@ -98,45 +102,6 @@
     text-align: left;
     font-family: "Lexend", sans-serif;
     font-size: 16px;
-}
-
-@media  only screen and (max-width: 1000px) {
-    .container,
-    .container-lg,
-    .container-md,
-    .container-sm,
-    .container-xl,
-    .container-xxl {
-      max-width: 1410px!important;
-    }
-
-    .search {
-        display: inline;
-        margin-top: 5%;
-        flex-direction: column; 
-    }
-
-    .search-input {
-        margin-left: 5%;
-        margin-top: 2%;
-    }
-
-    .my-rooms {
-        margin-left: 5%;
-    }
-
-    .input-room {
-        width: 50%;
-    }
-
-    .custom-table th,
-    .custom-table td {
-        font-size: 12px;
-    }
-
-    .custom-table {
-        width: 75%;
-    }
 }
   
 .roomscardfooter{
@@ -275,7 +240,11 @@ background-color: aquamarine;
     letter-spacing: 2px;
     font-weight: 300;
     color: #ffffff;
-    transition: background-color 300ms ease-out;
+    transition: 300ms ease-out;
+}
+
+.search-button:hover {
+    background-color: #C81F21;
 }
 
 
@@ -313,5 +282,70 @@ background-color: aquamarine;
 .card>.list-group:last-child {
     --bs-card-inner-border-radius: 12px;
     border-bottom-right-radius: 12px
+}
+
+@media  only screen and (max-width: 1000px) {
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl,
+    .container-xxl {
+      max-width: 1410px!important;
+    }
+
+    .search {
+        display: inline;
+        margin-top: 5%;
+        flex-direction: column; 
+    }
+
+    .search-input {
+        margin-left: 5%;
+        margin-top: 2%;
+    }
+
+    .my-rooms {
+        margin-left: 5%;
+    }
+
+    .input-room {
+        width: 50%;
+    }
+
+    .custom-table th,
+    .custom-table td {
+        font-size: 12px;
+    }
+
+    .custom-table {
+        width: 75%;
+    }
+    .search-button {
+        background-color: #8D0709;
+        border: none;
+        border-radius: 12px;
+        height: 40px;
+        width: 127px;
+        font-family: "Lexend", sans-serif;
+        font-size: 12px;
+        letter-spacing: 2px;
+        font-weight: 300;
+        color: #ffffff;
+        transition: 300ms ease-out;
+        margin-top: 3%;
+    }
+    .input-room {
+        font-family: "Lexend", sans-serif;
+        letter-spacing: 2px;
+        font-size: 12px;
+        font-weight: 300;
+        height: 45px;
+        width: 310px;
+        margin-right: 10px;
+        border: 1px solid #8D0709;
+        border-radius: 16px;
+        padding-left: 2%;
+    }
 }
 
