--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,7 +1,7 @@
 .loader {
     width: 48px;
     height: 48px;
-    border: 5px solid  #642a29;
+    border: 5px solid  #8D0709;
     border-bottom-color: transparent;
     border-radius: 50%;
     display: inline-block;
