--- a/src/styles/Roomsnew.css
+++ b/src/styles/Roomsnew.css
@@ -233,6 +233,7 @@ background-color: aquamarine;
     background-color: #8D0709;
     border: none;
     border-radius: 12px;
+    border-color: #8D0709;
     height: 40px;
     width: 127px;
     font-family: "Lexend", sans-serif;
