--- a/src/styles/Form_reg.css
+++ b/src/styles/Form_reg.css
@@ -5,10 +5,8 @@
     background-color: #d9d9d9; /* Red */
     color: black;
     margin-bottom: 15px;
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 16px;
-    letter-spacing: 2px;
-    font-weight: 300;
   }
   
   /* The close button */
@@ -373,10 +371,8 @@ li .active::after {
         background-color: #d9d9d9; /* Red */
         color: black;
         margin-bottom: 15px;
-        font-family: "Lexend", sans-serif;
+        font-family: "Roboto Flex", sans-serif;
         font-size: 12px;
-        letter-spacing: 2px;
-        font-weight: 300;
       }
     .form_button_next_step {
         display: block;
