--- a/src/styles/Roomnew.css
+++ b/src/styles/Roomnew.css
@@ -1,5 +1,14 @@
+.no-pictures{
+    margin-top: 58%;
+    margin-bottom: 60%;
+    margin-left: 35%;
+    width: 30%;
+    font-size: 16px;
+    font-family: "Roboto Flex", sans-serif;
+}
+
 .roombody{
-    height: 93vh;
+    height: 100vh;
     font-size: small;
 }
 .roommain{
@@ -13,19 +22,15 @@
 }
 .furniture_type{
     padding: 10px;
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 16px;
-    letter-spacing: 2px;
-    font-weight: 300;
     background-color: #d9d9d9;
 }
 
 .furniture_description {
     padding-left: 10px;
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 12px;
-    letter-spacing: 2px;
-    font-weight: 300;
 }
 
 .finish_date_input{
@@ -95,12 +100,9 @@ width: 40%;
     margin-top: 10px;
     margin-left: 3%;
     padding: 8px;
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 12px;
-    letter-spacing: 2px;
-    font-weight: 300;
     color: #ffffff;
-    width: 10%;
     text-align: center;
     transition: background-color 300ms ease-out;
 }
@@ -121,10 +123,8 @@ width: 40%;
     cursor: pointer;
     margin-top: 30px;
     margin-left: 8%;
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 12px;
-    letter-spacing: 2px;
-    font-weight: 300;
     transition: background-color 300ms ease-out;
 }
 
@@ -147,9 +147,8 @@ width: 40%;
     margin: 5px;
     width: 100%;
     height: 100%;
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 12px;
-    font-weight: 300;
     text-align: center;
     cursor: pointer;
     transition: background-color 300ms ease-out;
@@ -170,12 +169,15 @@ width: 40%;
     margin: 5px;
     width: 100%;
     height: 100%;
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 12px;
-    font-weight: 300;
     text-align: center;
     cursor: pointer;
     transition: background-color 300ms ease-out;
+}
+
+.fa-solid {
+    font-size: 16px;
 }
 
 .verify_button_confirmed:hover{
@@ -190,7 +192,7 @@ width: 40%;
 }
 .furniture_navigation {
     display: flex;
-    gap: 10px;
+    gap: 30%;
     padding: 10px 30px;
     align-items: center; /* Align arrows vertically center */
   }
@@ -271,9 +273,8 @@ background-color: aquamarine;
 
 .roomroomfur_active{
     font-weight: 600;
-    font-family: "Lexend", sans-serif;
-    font-size: 12px;
-    letter-spacing: 2px;
+    font-family: "Roboto Flex", sans-serif;
+    font-size: 16px;
     display: flex;
     cursor: pointer;
     flex-direction: column;
@@ -288,10 +289,8 @@ background-color: aquamarine;
 }
 
 .roomroomfur{
-    font-weight: 300;
-    font-family: "Lexend", sans-serif;
-    font-size: 12px;
-    letter-spacing: 2px;
+    font-family: "Roboto Flex", sans-serif;
+    font-size: 16px;
     display: flex;
     cursor: pointer;
     flex-direction: column;
@@ -362,10 +361,8 @@ background-color: aquamarine;
         } 
     
 .roomroomfur_end{
-    font-weight: 300;
-    font-family: "Lexend", sans-serif;
-    font-size: 12px;
-    letter-spacing: 2px;
+    font-family: "Roboto Flex", sans-serif;
+    font-size: 16px;
     display: flex;
     cursor: pointer;
     flex-direction: column;
@@ -385,10 +382,8 @@ background-color: aquamarine;
 }
 
 .roomroomfur_accept{
-    font-weight: 300;
-    font-family: "Lexend", sans-serif;
-    font-size: 12px;
-    letter-spacing: 2px;
+    font-family: "Roboto Flex", sans-serif;
+    font-size: 16px;
     display: flex;
     cursor: pointer;
     flex-direction: column;
@@ -439,8 +434,8 @@ background-color: aquamarine;
 
 .furniture_navigation1 {
     display: flex;
-    gap: 10px;
-    padding: 3% 43%;
+    gap: 70%;
+    padding: 3% 27%;
     align-items: center; /* Align arrows vertically center */
 }
 .finish_date_text{
@@ -492,42 +487,49 @@ background-color: aquamarine;
 }
 
 @media only screen and (max-width: 1000px)  {
+    .no-pictures{
+        margin-top: 60%;
+        margin-bottom: 60%;
+        margin-left: 35%;
+        width: 40%;
+        font-size: 16px;
+        font-family: "Roboto Flex", sans-serif;
+    }
+    .fa-solid {
+        font-size: 12px;
+    }
+    
     .roomroomfur_accept{
         border-radius: 12px;
-        font-size: 8px;
-        letter-spacing: 1px;
+        font-size: 12px;
         margin: 2px 2px;
         padding: 5px 8px;
     }
 
     .roomroomfur_end{
         border-radius: 12px;
-        font-size: 8px;
-        letter-spacing: 1px;
+        font-size: 12px;
         margin: 2px 2px;
         padding: 5px 8px;
     }
 
     .roomroomfur{
         border-radius: 12px;
-        font-size: 8px;
-        letter-spacing: 1px;
+        font-size: 12px;
         padding: 5px 8px;
         margin: 2px 2px;
-        width: 92%
     }
 
     .roomroomfur_active{
         border-radius: 12px;
-        font-size: 8px;
-        letter-spacing: 1px;
+        font-size: 12px;
         margin: 2px 2px;
         padding: 5px 8px;
     }
 
     .furniture_navigation>div{
         padding: 4px;
-        font-size: 8px;
+        font-size: 12px;
         height: 30%;
     }
 
@@ -564,9 +566,18 @@ background-color: aquamarine;
         border-radius: 12px;
     }
     .move_out_button {
-        font-size: 8px;
-        width: 20%;
-        margin-top: 2%;
+        background-color: #8D0709;
+        border: none;
+        border-radius: 12px;
+        margin-top: 10px;
+        margin-left: 3%;
+        padding: 8px;
+       
+        font-family: "Roboto Flex", sans-serif;
+        font-size: 12px;
+        color: #ffffff;
+        text-align: center;
+        transition: background-color 300ms ease-out;
     }
     .finish_date_input{
         padding: 8px 12px;
@@ -574,21 +585,16 @@ background-color: aquamarine;
         border-radius: 12px;
         box-sizing: border-box; /* Ensure padding and border are included in the width */
         background-color: #f8f8f8;
-        margin-top: 2%;
-        width: 20%;
-        right: 20%;
-        font-weight: 300;
-        font-family: "Lexend", sans-serif;
-        font-size: 8px;
-        letter-spacing: 2px;
+        margin-top: 10px;
+        margin-left: 20%;
+        width: 25%
     }
     .finish_date_text{
-        width: 20%;
+        width: 50%;
     }
     .roomroomfur_active{
-        font-weight: 300;
-        font-family: "Lexend", sans-serif;
-        font-size: 8px;
+        font-family: "Roboto Flex", sans-serif;
+        font-size: 12px;
         padding: 5px 8px;
         margin: 2px 2px;
         border-radius: 12px;
