--- a/src/styles/Form_reg.css
+++ b/src/styles/Form_reg.css
@@ -1,3 +1,12 @@
+.send-text {
+    font-size: 16px;
+    font-family: "Roboto Flex", sans-serif;
+}
+
+.send-text-main {
+    margin-left: 2%;
+}
+
 .alert_div {
     width: 70%;
     margin-left: 15%;
@@ -13,7 +22,6 @@
   .closebtn {
     margin-left: 15px;
     color: black;
-    font-weight: bold;
     float: right;
     font-size: 22px;
     line-height: 20px;
@@ -106,10 +114,8 @@
     border: solid;
     border-color: #8D0709;
     border-width: 3px;
-    font-family: "Lexend", sans-serif;
-    letter-spacing: 2px;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 16px;
-    font-weight: 300;
     border-radius: 12px;
 }
   
@@ -139,20 +145,23 @@
 .body_furniture textarea {
     text-align: justify;
 }
+
 input:disabled,
 input[disabled]{
   border: 1px solid #999999;
   background-color: #cccccc;
   color: #666666;
+  margin-left: 2%;
 }
 input:disabled,
 input[disabled]:hover{
   border: 1px solid #999999;
   background-color: #cccccc;
   color: #666666;
+  margin-left: 2%;
 }
 .file_input {
-    width: 50%;
+    width: 200px;
     max-width: 300px;
 }
 
@@ -177,10 +186,8 @@ input[disabled]:hover{
     cursor: pointer;
     padding: 14px;
     background-color: #8D0709;
-    font-family: "Lexend", sans-serif;
-    letter-spacing: 2px;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 16px;
-    font-weight: 300;
     width: 100%;
     height: 50px;
     text-align: center;
@@ -236,7 +243,6 @@ input[disabled]:hover{
 .user_label {
     font-size: 90%;
     padding-bottom: 10px;
-    font-weight: 500;
     color: #542400;
 
 }
@@ -274,6 +280,7 @@ input[disabled]:hover{
     max-width: 1000px;
     display: flex;
     justify-content: space-between;
+    padding-top: 3%;
 }
 
 .stage_wrapper li {
@@ -294,10 +301,8 @@ input[disabled]:hover{
 }
 
 .stage_wrapper li .label {
-    font-family: sans-serif;
-    letter-spacing: 1px;
-    font-size: 12px;
-    font-weight: bold;
+    font-family: "Roboto Flex", sans-serif;
+    font-size: 16px;
     color: #000000;
 }
 
@@ -364,6 +369,9 @@ li .active::after {
 }
 
 @media screen and (max-width:480px){
+    .stage_wrapper {
+        padding-top: 8%;
+    }
     .alert_div {
         margin-left: 0%;
         width: 100%;
@@ -379,16 +387,14 @@ li .active::after {
         cursor: pointer;
         color: #000000;
         transition: .5s all;
-        width: 200px;
+        width: 40%;
         height: 45px;
         background-color: #ffffff;
         border: solid;
         border-color: #8D0709;
         border-width: 3px;
-        font-family: "Lexend", sans-serif;
-        letter-spacing: 2px;
+        font-family: "Roboto Flex", sans-serif;
         font-size: 12px;
-        font-weight: 300;
         border-radius: 12px;
       }
     .submit_align_wrapper{
@@ -406,12 +412,12 @@ li .active::after {
     }
     
     .stage_wrapper li .label {
-        font-size: 8px;
+        font-size: 12px;
     }
     .button_next{
       width: 300px;
       height: 80px;
-      font-size: 18px;
+      font-size: 16px;
     }
     .main_div {
         width: 90%;
@@ -437,10 +443,8 @@ li .active::after {
 
 .user_input {
     display: flex;
-    font-family: "Lexend", sans-serif;
-    font-size: 12px;
-    letter-spacing: 2px;
-    font-weight: 300;
+    font-family: "Roboto Flex", sans-serif;
+    font-size: 16px;
     border-radius: 16px;
     width: 30%;
     padding: 1%;
@@ -457,29 +461,23 @@ li .active::after {
 }
 
 .text_header {
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 16px;
-    letter-spacing: 2px;
-    font-weight: 300;
     margin-top: 10px;
     padding: 10px 0px 0px 0px;
     margin-left: 20px;
 }
 
 .questions-text {
-    font-family: "Lexend", sans-serif;
-    font-size: 12px;
-    letter-spacing: 2px;
-    font-weight: 300;
+    font-family: "Roboto Flex", sans-serif;
+    font-size: 16px;
     padding-top: 5px;
     margin-left: 20px;
 }
 
 .obj_description {
-    font-family: "Lexend", sans-serif;
-    font-size: 12px;
-    letter-spacing: 2px;
-    font-weight: 300;
+    font-family: "Roboto Flex", sans-serif;
+    font-size: 16px;
     width: 100%;
     margin-bottom: 15px;
     margin-left: 5%;
@@ -508,10 +506,8 @@ li .active::after {
 }
 
 .error_block {
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 12px;
-    letter-spacing: 2px;
-    font-weight: 300;
     width: 70%;
     background-color: #8D0709;
     color: #ffffff;
@@ -525,16 +521,15 @@ li .active::after {
     display: inline-block;
     border: none;
     cursor: pointer;
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 16px;
-    letter-spacing: 2px;
-    font-weight: 300;
     padding: 12px;
     background-color: #8D0709;
     width: 200px;
     height: 50px;
     text-align: center;
     transition: background-color 300ms ease-out;
+    margin-right: 8%;
 }
 .submit_form:hover {
     background-color: #C81F21;
@@ -567,9 +562,7 @@ li .active::after {
 
 
 .results_wrapper{
-    display: flex;
-    justify-content: space-between;
-    
+    justify-content: space-between;    
 }
 .react-slideshow-container{
     width: 100%!important;
@@ -582,10 +575,8 @@ li .active::after {
 }
 .room_type {
     padding: 20px;
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 16px;
-    letter-spacing: 2px;
-    font-weight: 600;
     color: #000000;
     outline: none;
     text-align: center;
@@ -598,26 +589,20 @@ justify-content: center;
 }
 
 .next-stage {
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 16px;
-    letter-spacing: 2px;
-    font-weight: 300;
     margin-left: 5%;
 }
 
 .next-stage-name {
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-size: 16px;
-    letter-spacing: 2px;
-    font-weight: 600;
 }
 
 @media screen and (max-width:480px){
     .user_input {
-        font-family: "Lexend", sans-serif;
+        font-family: "Roboto Flex", sans-serif;
         font-size: 12px;
-        letter-spacing: 2px;
-        font-weight: 300;
         border-radius: 16px;
         width: 80%;
         padding: 2%;
@@ -627,10 +612,8 @@ justify-content: center;
         margin-left: 0px;
     }
     .obj_description {
-        font-family: "Lexend", sans-serif;
+        font-family: "Roboto Flex", sans-serif;
         font-size: 12px;
-        letter-spacing: 2px;
-        font-weight: 300;
         width: 100%;
         margin-bottom: 15px;
         margin-left: 0%;
@@ -642,20 +625,16 @@ justify-content: center;
         border: 1px solid #8D0709;
     }
     .text_header {
-        font-family: "Lexend", sans-serif;
+        font-family: "Roboto Flex", sans-serif;
         font-size: 12px;
-        letter-spacing: 2px;
-        font-weight: 300;
         margin-top: 10px;
         padding: 10px 0px 0px 0px;
         margin-left: 0px;
     }
     
     .questions-text {
-        font-family: "Lexend", sans-serif;
+        font-family: "Roboto Flex", sans-serif;
         font-size: 12px;
-        letter-spacing: 2px;
-        font-weight: 300;
         padding-top: 5px;
         margin-left: 0px;
     }
@@ -680,13 +659,13 @@ justify-content: center;
         justify-content: space-between;
     }
     .file_input{
-        width: 50%;
+        width: 150px;
         max-width: 300px;
     }
     .file_input::before {
         /* width: 100px; */
         font-size: 12px;
-        width: 100%;
+        width: 150px;
         height: 45px;
     }
     .clear_images{
@@ -702,28 +681,28 @@ justify-content: center;
         display: inline-block;
         border: none;
         cursor: pointer;
-        font-family: "Lexend", sans-serif;
+        font-family: "Roboto Flex", sans-serif;
         font-size: 12px;
-        letter-spacing: 2px;
-        font-weight: 300;
         padding: 12px;
         background-color: #8D0709;
-        width: 200px;
+        width: 150px;
         height: 45px;
         text-align: center
     }
     .next-stage {
-        font-family: "Lexend", sans-serif;
+        font-family: "Roboto Flex", sans-serif;
         font-size: 12px;
-        letter-spacing: 2px;
-        font-weight: 300;
         margin-left: 0%;
     }
     
     .next-stage-name {
-        font-family: "Lexend", sans-serif;
+        font-family: "Roboto Flex", sans-serif;
         font-size: 12px;
-        letter-spacing: 2px;
-        font-weight: 600;
+    }
+    .send-text {
+        font-size: 12px;
+    }
+    .send-text-main {
+        margin-left: 0%;
     }
 }
