--- a/src/styles/bodynew.css
+++ b/src/styles/bodynew.css
@@ -3,7 +3,7 @@ body{
 
     margin: 0px;
     overflow-x: hidden;
-    font-family: "Lexend", sans-serif;
+    font-family: "Roboto Flex", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
     color:#1B1C57;
