--- a/src/styles/Main_form.css
+++ b/src/styles/Main_form.css
@@ -24,13 +24,9 @@
 }
 
 .reg_text_div{
-  /* padding: 40px; */
   height: 70px;
-  font-size: 18px;
-  /* margin-top: 60px; */
-  text-transform: uppercase;
-  font-family: 'Montserrat Medium 500', sans-serif;
-  letter-spacing: 5px;
+  font-size: 16px;
+  font-family: "Roboto Flex", sans-serif;
   margin-bottom: 0.8rem;
   color: #000000;
   outline: none;
