--- a/src/styles/Form_reg.css
+++ b/src/styles/Form_reg.css
@@ -115,6 +115,7 @@
     transition: .5s all;
     width: 200px;
     height: 45px;
+    margin-left: 5%;
     background-color: #ffffff;
     border: solid;
     border-color: #8D0709;
